--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                 <td>208</td>
                 <td>10:00</td>
             </tr>
+             <tr>
+                <td>Четверг</td>
+                <td>Физика</td>
+                <td>Решить задачу</td>
+                <td>215</td>
+                <td>8.00</td>
+            </tr>
+            <tr>
+                <td>Пятница</td>
+                <td>География</td>
+                <td>Выучить страны</td>
+                <td>324</td>
+                <td>9.00</td>
+            </tr>
         </table>
     </div>
     <div>
