--- a/Заготовка проекта (1)/index.html
+++ b/Заготовка проекта (1)/index.html
@@ -42,6 +42,19 @@
                 <td>Написать сочинение по теме "Великая Отечественная война". </td>
                 <td>208</td>
                 <td>10:00</td>
+                <tr>
+                <td>Четверг</td>
+                <td>Физика</td>
+                <td>Решить задачу</td>
+                <td>215</td>
+                <td>8.00</td>
+            </tr>
+            <tr>
+                <td>Пятница</td>
+                <td>География</td>
+                <td>Выучить страны</td>
+                <td>324</td>
+                <td>9.00</td>
             </tr>
         </table>
     </div>
